[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "4958customs"
version = "0.0.0"
authors = [
  { name="arti404", email="chelp.rostoi@yandex.ru" },
]
description = "some life-simplifying python tools and utilities for some lazy devs from some lazy devs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/4958dev/team4958_customs"
"Bug Tracker" = "https://github.com/4958dev/team4958_customs/issues"