[tool.poetry]
name = "team4958-customs"
version = "0.2.4"
description = "some life-simplifying python tools for some lazy devs from some lazy devs"
authors = ["arti404 <113468982+arti404@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "team4958_customs"}]

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector-python = "^8.1.0"
disnake = "^2.8.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"